Bug 262222 : Relative URLs in Live Bookmark link elements not resolved, patch by Sam Ruby <rubys@intertwingly.net>, r=vlad, a=bsmedberg